--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -10,13 +10,13 @@ bibliography: references.bib
 knitr::opts_chunk$set(echo = TRUE)
 
 # List of packages to install
-packages <- c("tidyverse", "reticulate", "countrycode", "lubridate")
+packages <- c("tidyverse", "janitor", "reticulate", "countrycode", "lubridate")
 
 # To install the packages, uncomment the line below and run it
 #install.packages(packages)
 
-
 library(tidyverse)
+library(janitor)
 library(reticulate)
 library(countrycode)
 library(lubridate)
@@ -25,26 +25,53 @@ library(lubridate)
 
 ```{r importing_and_merging}
 
-# Economist Intelligence Unit
-EIU_democracy_index_clean <- read_csv("data/EIU_democracy_index_clean.csv")
-df_eiu <- EIU_democracy_index_clean %>%
-  mutate(country_standard = countryname(Country)) %>%
-  rename(date_eiu = Date, year = Year) %>%
-  select(country_standard, year, Overall_score:`Regime type`)
-
 # COVID-19 data from Our World in Data
 owid_covid_data <- read_csv("data/owid-covid-data.csv")
 df_covid_owid <- owid_covid_data %>%
+  clean_names() %>%
   mutate(
     country_standard = countryname(location),
     date = mdy(date),
     year = year(date)) %>%
   select(country_standard, year, everything())
 
+# Economist Intelligence Unit
+EIU_democracy_index_clean <- read_csv("data/EIU_democracy_index_clean.csv")
+df_eiu <- EIU_democracy_index_clean %>%
+  clean_names() %>%
+  mutate(country_standard = countryname(country)) %>%
+  # Adding "OGP" prefix to column names
+  rename_with( 
+  ~ paste("eiu", .x, sep = "_"), 
+  overall_score:date) %>%
+  select(country_standard, year, eiu_overall_score:eiu_regime_type)
+
+# Data from Open Government Partnership
+OGP_data <- read_excel("data/OGP_data.xlsx", 
+    sheet = "Data")
+df_ogp <- OGP_data %>%
+  clean_names() %>%
+  mutate(country_standard = countrycode(
+    country_code, 
+    origin = "iso3c", 
+    destination = "country.name")) %>%
+  # Adding "OGP" prefix to column names
+  rename_with( 
+  ~ paste("ogp", .x, sep = "_"), 
+  date_joined:fiscal_openness_oversight) %>%
+  select(country_standard, everything())
+
 # Merging datasets
 df_all <- df_covid_owid %>%
   full_join(df_eiu, by = c("country_standard", "year")) %>%
-  select(country_standard, year, Overall_score:`Regime type`, everything()) %>%
+  full_join(df_ogp, by = "country_standard") %>%  
+  select(
+    country_standard, 
+    year, 
+    date,
+    eiu_overall_score:eiu_regime_type,
+    ogp_participating:ogp_fiscal_openness_oversight,
+    everything()) %>%
   mutate(post_covid = 
            ifelse(year >= 2020,
                   TRUE,
@@ -53,6 +80,8 @@ df_all <- df_covid_owid %>%
 # Exporting dataset
 write_csv(df_all, "data/merged_data.csv")
 ```
+
+Note that the following country codes don't appear to be iso3c and don't match to a country name: ARBA, BRSP, CAON, CONR, ESMD, ESPV, FRPA, GBSC, GETB, GHST, IDBO, KEEM, KRSE, MXJL, NGKD, PELL, PHSC, ROIS, TZKG, USAU
 
 You can do python code, like in example chunk below.
 
