--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -169,7 +169,7 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
         origin = "iso3c", 
         destination = "country.name"
         )) %>%
-    # Adding "OGP" prefix to column names
+    # Adding "eiu" prefix to column names
     rename_with( 
     ~ paste("eiu", .x, sep = "_"), 
     overall_score:date) %>%
@@ -188,7 +188,7 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
         country_code,
         origin = "iso3c",
         destination = "country.name")) %>%
-    # Adding "OGP" prefix to column names
+    # Adding "ogp" prefix to column names
     rename_with( 
     ~ paste("ogp", .x, sep = "_"), 
     c(date_joined, current_action_plan, open_budget_survey_transparency_score)) %>%
@@ -241,6 +241,7 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
           origin = "iso3c", 
           destination = "country.name"
           )) %>%
+    # Adding "vdem" prefix to indicators      
     rename_with( 
       ~ paste("vdem", .x, sep = "_"),
       v2x_libdem:v2x_cspart) %>%
