--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -220,7 +220,7 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     # Adding "wgi" prefix to indicators
     rename_with( 
       ~ paste("wgi", .x, sep = "_"),
-      voice_and_accountability_x:voice_and_accountability_y) %>%
+      voice_and_accountability:control_of_corruption) %>%
     select(country_standard, year, everything(), -x1, -country, -iso_code)
   
 ########################################    
