--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -294,6 +294,21 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
       v2x_libdem:v2x_cspart) %>%
     select(country_standard, year, everything(), -country_name, -iso_code)    
   
+  # Data from V-Dem's "Pandemic Backsliding" Project
+  import_pandem <- read_csv("data/PanDem_ts_V5.csv")
+  
+  df_pandem <- import_pandem  %>%
+    clean_names() %>%
+    mutate(
+      iso_code = countrycode(country_name, origin = 'country.name', destination = 'iso3c'),        
+      country_standard = countrycode(
+          iso_code, 
+          origin = "iso3c", 
+          destination = "country.name"
+          )) %>%
+    select(country_standard, pandem, panback) %>%
+    distinct()
+  
 ########################################    
   
 ## Freedom House indicators ##
@@ -305,8 +320,9 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     filter(!countries %in% 
              c('Abkhazia', 'Crimea', 'Eastern Donbas', 'Kosovo', 'Micronesia',
                'Nagorno-Karabakh', 'Somaliland', 'South Ossetia', 'Tibet',
-               'Transnistria')) %>%    
-    pivot_longer(!countries, names_to = "year", values_to = "fh_indicator") %>%
+               'Transnistria')) %>%
+    # If I want to take out the line below, import sheet two from the excel file instead
+    pivot_longer(!countries, names_to = "year", values_to = "fh_global_freedom_score") %>%
     mutate(
       iso_code = countrycode(countries, origin = 'country.name', destination = 'iso3c'),        
       country_standard = countrycode(
@@ -314,9 +330,9 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
           origin = "iso3c", 
           destination = "country.name"),
       year = as.numeric(str_remove(year, "x"))) %>%
-    select(country_standard, year, fh_indicator) %>%
+    select(country_standard, year, fh_global_freedom_score) %>%
     arrange(country_standard, year)
-  
+
 ########################################      
     
 ## Africa Integrity Indicators ##
@@ -498,7 +514,8 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     full_join(df_ogp, by = "country_standard") %>%  
     full_join(df_wgi, by = c("country_standard", "year")) %>%  
     full_join(df_wgi_effect, by = c("country_standard", "year")) %>%
-    full_join(df_vdem, by = c("country_standard", "year")) %>%    
+    full_join(df_vdem, by = c("country_standard", "year")) %>%
+    full_join(df_pandem, by = "country_standard") %>%  
     full_join(df_fh, by = c("country_standard", "year")) %>%       
     full_join(df_gdp_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_percap_health_expend, by = c("country_standard", "year")) %>%
