--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -466,9 +466,12 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
 ### Merging datasets ###
   df_all <- df_covid_owid %>%
     full_join(df_eiu, by = c("country_standard", "year")) %>%
+    full_join(df_cpi, by = c("country_standard", "year")) %>%
     full_join(df_ogp, by = "country_standard") %>%  
-    full_join(df_wgi, by = c("country_standard", "year")) %>%  
-    full_join(df_vdem, by = c("country_standard", "year")) %>%    
+    full_join(df_wgi, by = c("country_standard", "year")) %>% 
+    full_join(df_wgi_effect, by = c("country_standard", "year")) %>%
+    full_join(df_vdem, by = c("country_standard", "year")) %>% 
+    full_join(df_pandem, by = "country_standard") %>%      
     full_join(df_fh, by = c("country_standard", "year")) %>%       
     full_join(df_gdp_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_percap_health_expend, by = c("country_standard", "year")) %>%
@@ -512,10 +515,10 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     full_join(df_eiu, by = c("country_standard", "year")) %>%
     full_join(df_cpi, by = c("country_standard", "year")) %>%
     full_join(df_ogp, by = "country_standard") %>%  
-    full_join(df_wgi, by = c("country_standard", "year")) %>%  
+    full_join(df_wgi, by = c("country_standard", "year")) %>% 
     full_join(df_wgi_effect, by = c("country_standard", "year")) %>%
-    full_join(df_vdem, by = c("country_standard", "year")) %>%
-    full_join(df_pandem, by = "country_standard") %>%  
+    full_join(df_vdem, by = c("country_standard", "year")) %>% 
+    full_join(df_pandem, by = "country_standard") %>%      
     full_join(df_fh, by = c("country_standard", "year")) %>%       
     full_join(df_gdp_health_expend, by = c("country_standard", "year")) %>%
     full_join(df_percap_health_expend, by = c("country_standard", "year")) %>%
