--- a/ndi_analysis.Rmd
+++ b/ndi_analysis.Rmd
@@ -11,8 +11,11 @@ knitr::opts_chunk$set(
 	warning = FALSE,
 	include = FALSE
 )
+
+# This code uses dplyr functions released in February 2021, so please update dplyr if you have not done so already.
+
 # List of packages to install
-packages <- c("tidyverse", "readxl", "janitor", "reticulate", "countrycode", "Hmisc", "lubridate", "skimr", "haven")
+packages <- c("tidyverse", "readxl", "janitor", "reticulate", "countrycode", "Hmisc", "lubridate", "skimr", "haven", "scales")
 
 # To install the packages, uncomment the line below and run it
 #install.packages(packages)
@@ -26,12 +29,12 @@ library(Hmisc)
 library(lubridate)
 library(skimr)
 library(haven)
-
+library(scales)
 ```
 
 ```{r functions, message=FALSE, warning=FALSE, include=FALSE}
 
-year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
+fig_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
 # Source: https://stackoverflow.com/questions/24519794/r-max-function-ignore-na/24520992
 
 ```
@@ -66,87 +69,114 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
   # Summarizing COVID-19 data by year (previous data frame was daily)
   df_covid_owid_yr <- df_covid_owid %>%
     group_by(country_standard, year) %>%
-    # Getting max values for the following variables by year and country
-    # These vall\ues all begin with "comb"
+    # Getting cumulative values for the following variables by year and country
+    # These values all begin with "cum_eoy" (cumulative by end of year)
     mutate(
-      comb_total_cases = 
-        year_max(total_cases),
-      comb_total_deaths = 
-        year_max(total_deaths),
-      comb_total_cases_per_million = 
-        year_max(total_cases_per_million),
-      comb_total_deaths_per_million = 
-        year_max(total_deaths_per_million),
-      comb_total_tests = 
-        year_max(total_tests),
-      comb_total_tests_per_thousand = 
-        year_max(total_tests_per_thousand),
-      comb_total_vaccinations = 
-        year_max(total_vaccinations),
-      comb_people_vaccinated = 
-        year_max(people_vaccinated),
-      comb_people_fully_vaccinated = 
-        year_max(people_fully_vaccinated),
-      comb_total_vaccinations_per_hundred = 
-        year_max(total_vaccinations_per_hundred),
-      comb_people_vaccinated_per_hundred = 
-        year_max(people_vaccinated_per_hundred),
-      comb_people_fully_vaccinated_per_hundred = 
-        year_max(people_fully_vaccinated_per_hundred)) %>%
+      cum_eoy_total_cases = 
+        fig_max(total_cases),
+      cum_eoy_total_deaths = 
+        fig_max(total_deaths),
+      cum_eoy_total_cases_per_million = 
+        fig_max(total_cases_per_million),
+      cum_eoy_total_deaths_per_million = 
+        fig_max(total_deaths_per_million),
+      cum_eoy_total_tests = 
+        fig_max(total_tests),
+      cum_eoy_total_tests_per_thousand = 
+        fig_max(total_tests_per_thousand),
+      cum_eoy_total_vaccinations = 
+        fig_max(total_vaccinations),
+      cum_eoy_people_vaccinated = 
+        fig_max(people_vaccinated),
+      cum_eoy_people_fully_vaccinated = 
+        fig_max(people_fully_vaccinated),
+      cum_eoy_total_vaccinations_per_hundred = 
+        fig_max(total_vaccinations_per_hundred),
+      cum_eoy_people_vaccinated_per_hundred = 
+        fig_max(people_vaccinated_per_hundred),
+      cum_eoy_people_fully_vaccinated_per_hundred = 
+        fig_max(people_fully_vaccinated_per_hundred)) %>%
     summarise(across(where(is.numeric), mean, na.rm = TRUE), .groups = "keep") %>%
     ungroup() %>%
     group_by(country_standard) %>%
     arrange(year) %>%
-    # Dividing totals by year
     mutate(
-      total_cases = ifelse(
+      # Finding amounts per year
+      # These values all begin with "annual"
+      annual_total_cases = ifelse(
         year == 2020,
-        comb_total_cases,
-        comb_total_cases - lag(comb_total_cases)),
-      total_deaths = ifelse(
+        cum_eoy_total_cases,
+        cum_eoy_total_cases - lag(cum_eoy_total_cases)),
+      annual_total_deaths = ifelse(
         year == 2020,
-        comb_total_deaths,
-        comb_total_deaths - lag(comb_total_deaths)),
-      total_cases_per_million = ifelse(
+        cum_eoy_total_deaths,
+        cum_eoy_total_deaths - lag(cum_eoy_total_deaths)),
+      annual_total_cases_per_million = ifelse(
         year == 2020,
-        comb_total_cases_per_million,
-        comb_total_cases_per_million - lag(comb_total_cases_per_million)),
-      total_deaths_per_million = ifelse(
+        cum_eoy_total_cases_per_million,
+        cum_eoy_total_cases_per_million - lag(cum_eoy_total_cases_per_million)),
+      annual_total_deaths_per_million = ifelse(
         year == 2020,
-        comb_total_deaths_per_million,
-        comb_total_deaths_per_million - lag(comb_total_deaths_per_million)),
-      total_tests = ifelse(
+        cum_eoy_total_deaths_per_million,
+        cum_eoy_total_deaths_per_million - lag(cum_eoy_total_deaths_per_million)),
+      annual_total_tests = ifelse(
         year == 2020,
-        comb_total_tests,
-        comb_total_tests - lag(comb_total_tests)),
-      total_tests_per_thousand = ifelse(
+        cum_eoy_total_tests,
+        cum_eoy_total_tests - lag(cum_eoy_total_tests)),
+      annual_total_tests_per_thousand = ifelse(
         year == 2020,
-        comb_total_tests_per_thousand,
-        comb_total_tests_per_thousand - lag(comb_total_tests_per_thousand)),
-      total_vaccinations = ifelse(
+        cum_eoy_total_tests_per_thousand,
+        cum_eoy_total_tests_per_thousand - lag(cum_eoy_total_tests_per_thousand)),
+      annual_total_vaccinations = ifelse(
         year == 2020,
-        comb_total_vaccinations,
-        comb_total_vaccinations - lag(comb_total_vaccinations)),
-      people_vaccinated = ifelse(
+        cum_eoy_total_vaccinations,
+        cum_eoy_total_vaccinations - lag(cum_eoy_total_vaccinations)),
+      annual_people_vaccinated = ifelse(
         year == 2020,
-        comb_people_vaccinated,
-        comb_people_vaccinated - lag(comb_people_vaccinated)),
-      people_fully_vaccinated = ifelse(
+        cum_eoy_people_vaccinated,
+        cum_eoy_people_vaccinated - lag(cum_eoy_people_vaccinated)),
+      annual_people_fully_vaccinated = ifelse(
         year == 2020,
-        comb_people_fully_vaccinated,
-        comb_people_fully_vaccinated - lag(comb_people_fully_vaccinated)),
-      total_vaccinations_per_hundred = ifelse(
+        cum_eoy_people_fully_vaccinated,
+        cum_eoy_people_fully_vaccinated - lag(cum_eoy_people_fully_vaccinated)),
+      annual_total_vaccinations_per_hundred = ifelse(
         year == 2020,
-        comb_total_vaccinations_per_hundred,
-        comb_total_vaccinations_per_hundred - lag(comb_total_vaccinations_per_hundred)),
-      people_vaccinated_per_hundred = ifelse(
+        cum_eoy_total_vaccinations_per_hundred,
+        cum_eoy_total_vaccinations_per_hundred - lag(cum_eoy_total_vaccinations_per_hundred)),
+      annual_people_vaccinated_per_hundred = ifelse(
         year == 2020,
-        comb_people_vaccinated_per_hundred,
-        comb_people_vaccinated_per_hundred - lag(comb_people_vaccinated_per_hundred)),
-      people_fully_vaccinated_per_hundred = ifelse(
+        cum_eoy_people_vaccinated_per_hundred,
+        cum_eoy_people_vaccinated_per_hundred - lag(cum_eoy_people_vaccinated_per_hundred)),
+      annual_people_fully_vaccinated_per_hundred = ifelse(
         year == 2020,
-        comb_people_fully_vaccinated_per_hundred,
-        comb_people_fully_vaccinated_per_hundred - lag(comb_people_fully_vaccinated_per_hundred))
+        cum_eoy_people_fully_vaccinated_per_hundred,
+        cum_eoy_people_fully_vaccinated_per_hundred - lag(cum_eoy_people_fully_vaccinated_per_hundred)),
+      # Getting cumulative totals across years
+      # These values all begin with "cum"
+      cum_total_cases = 
+        fig_max(cum_eoy_total_cases),
+      cum_total_deaths = 
+        fig_max(cum_eoy_total_deaths),
+      cum_total_cases_per_million = 
+        fig_max(cum_eoy_total_cases_per_million),
+      cum_total_deaths_per_million = 
+        fig_max(cum_eoy_total_deaths_per_million),
+      cum_total_tests = 
+        fig_max(cum_eoy_total_tests),
+      cum_total_tests_per_thousand = 
+        fig_max(cum_eoy_total_tests_per_thousand),
+      cum_total_vaccinations = 
+        fig_max(cum_eoy_total_vaccinations),
+      cum_people_vaccinated = 
+        fig_max(cum_eoy_people_vaccinated),
+      cum_people_fully_vaccinated = 
+        fig_max(cum_eoy_people_fully_vaccinated),
+      cum_total_vaccinations_per_hundred = 
+        fig_max(cum_eoy_total_vaccinations_per_hundred),
+      cum_people_vaccinated_per_hundred = 
+        fig_max(cum_eoy_people_vaccinated_per_hundred),
+      cum_people_fully_vaccinated_per_hundred = 
+        fig_max(cum_eoy_people_fully_vaccinated_per_hundred)    
       ) %>%
     ungroup() %>%
     arrange(country_standard, year)
@@ -310,7 +340,7 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
     select(country_standard, year, everything(), -country_name, -iso_code)    
   
   # Data from V-Dem's "Pandemic Backsliding" Project
-  import_pandem <- read_csv("data/PanDem_ts_V5.csv")
+  import_pandem <- read_csv("data/PanDem_cs_V5.csv")
   
   df_pandem <- import_pandem  %>%
     clean_names() %>%
@@ -421,18 +451,18 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
   
 ##  Public health expenditures per capita ##
   
-  import_percap_Public_Health_Expenditure <- read_csv("data/WB_Public_Health_Expenditure_v2.csv")
+  import_percap_Public_Health_Expenditure <- read_csv("data/WB_Public_Health_Expenditure_v3.csv")
   
   df_percap_health_expend <- import_percap_Public_Health_Expenditure %>%
     clean_names() %>%
     # The data includes entries for "Arab World" as a country. Removing that.
-    filter(abbreviation != "ARB") %>%
+    filter(country_code != "ARB") %>%
     mutate(country_standard = countrycode(
-      abbreviation, 
+      country_code, 
       origin = "iso3c", 
       destination = "country.name")) %>%
     rename(percap_domestic_health_expenditure = domestic_health_expenditure) %>%
-    select(country_standard, year, everything(), -country_name, -abbreviation)
+    select(country_standard, year, everything(), -country_name, -country_code)
 
 ########################################      
     
@@ -475,10 +505,12 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
           )) %>%
     rename(gini_2020 = gini_coefficient_2020_data) %>%
     select(country_standard, gini_2020)  
+```
 
-########################################      
-  
-### Merging datasets ###
+
+Merging datasets
+
+```{r merging_data}
   df_all <- df_covid_owid %>%
     full_join(df_eiu, by = c("country_standard", "year")) %>%
     full_join(df_cpi, by = c("country_standard", "year")) %>%
@@ -569,35 +601,102 @@ year_max <- function(x) ifelse( !all(is.na(x)), max(x, na.rm = TRUE), NA)
   
 ```
 
-Reviewing the data
+When reviewing the data, a helpful link for issues: https://github.com/ropensci/skimr/issues/606
 
-A helpful link for issues: https://github.com/ropensci/skimr/issues/606
+```{r covid_controls}
 
-```{r message=FALSE, warning=FALSE, include=FALSE}
-skim_all <- skim(df_all)
-skim_all_yr <- skim(df_all_yr)
-skim_all_yr_2020 <- skim(df_all_yr_2020)
+# Controls for COVID outcomes
+df_covid_controls <- df_all_yr %>%
+  arrange(country_standard, year) %>%
+  group_by(country_standard) %>%
+  # These variables don't have values in 2020. Filling in from most recent year
+  fill(
+    c(gdp, pub_health_exp_percent_gdp, percap_domestic_health_expenditure)) %>%
+  filter(year==2020) %>%
+  select(
+    country_standard, 
+    gdp, 
+    pub_health_exp_percent_gdp, 
+    percap_domestic_health_expenditure)
+  
+df_covid_controls <- df_all_yr_2020 %>%
+  select(
+    country_standard, gdp_per_capita, gini_2020, median_age, aged_65_older) %>%
+  full_join(df_covid_controls, by = "country_standard") %>% 
+  select(
+    country_standard, gdp, gdp_per_capita, gini_2020, 
+        # we discussed using "public health expenditure as a proportion of GDP"
+        # as an indicator, but it seemed very similar to the next indicator
+        # below, which is "public health expenditure per capita"
+    #pub_health_exp_percent_gdp, 
+    percap_domestic_health_expenditure, 
+    median_age, aged_65_older)
+
+write_csv(df_covid_controls, "data/covid-19_controls.csv")
 
 ```
 
-# All Data (individual dates)
 
-```{r echo=TRUE}
-skim_all
+# Creating an index for COVID-19 health factors
+
+In index comes from the country-level amounts since the start of the pandemic, used in the following equation: (1 / COVID-19 cases per million) * (1 / COVID-19 deaths per million) * (total COVID-19 tests per thousand)
+
+The intuition is that countries will have a higher index score if they have fewer cases, fewer deaths, and more tests. The index is scaled from 0 (worst) to 1 (best).
+
+We decided on this index after testing it among six considered models. We regressed each index on our list of control variables and compared the F-statistic of each model. The chosen model had the second highest F-Statistic, but was chosen because a review of the country rankings of the model with the highest F-statistic revealed it to be a poor index.
+
+To see the code for the process above, see reference_dode/covid_index_select.r
+
+For countries that were missing data on COVID-19 tests, they are assigned a score of "1" on the scale of 1 to 10 used for countries' testing rates.
+
+```{r covid_index}
+df_covid_index <- df_all_yr %>%
+  select(
+    country_standard, 
+    cum_total_cases_per_million, 
+    cum_total_deaths_per_million,
+    cum_total_tests_per_thousand) %>%
+  filter(
+    if_any(
+      cum_total_cases_per_million:cum_total_deaths_per_million, 
+      ~ !is.na(.))) %>%  
+  distinct() %>%
+  mutate(
+        # Use a scale of 1 - 10 to avoid having "0" in denominator
+    stand_total_cases_per_million  = rescale(cum_total_cases_per_million, to = c(1, 10)),
+    stand_total_deaths_per_million = rescale(cum_total_deaths_per_million, to = c(1, 10)),
+    stand_total_tests_per_thousand = rescale(cum_total_tests_per_thousand, to = c(1, 10)),
+    stand_total_tests_per_thousand_no_NA = ifelse(
+      is.na(stand_total_tests_per_thousand), 
+      1, 
+      stand_total_tests_per_thousand),
+    covid_index = rescale(
+      (1/stand_total_cases_per_million) +
+      (1/stand_total_deaths_per_million) +
+      stand_total_tests_per_thousand_no_NA)
+    ) %>%
+  select(country_standard, covid_index, everything())
+
+# Reviewing distribution of the data
+histogram(df_covid_index$stand_total_cases_per_million)
+histogram(df_covid_index$stand_total_deaths_per_million)
+histogram(df_covid_index$stand_total_tests_per_thousand_no_NA)
+histogram(df_covid_index$covid_index)
+
+# RUnning a regression of control variables on COVID-19 index
+covid_index_mod_test <- df_covid_index %>% 
+  select(country_standard, covid_index) %>%
+  full_join(df_covid_controls, by = "country_standard") %>%
+  select(-country_standard)
+
+  lm(covid_index ~ ., data = covid_index_mod_test) %>% summary()
+
+write_csv(df_covid_index, "data/covid-19_index.csv")
+
 ```
 
 
-# All Data (annual)
 
-```{r echo=TRUE}
-skim_all_yr
-```
-
-# All Data (2020 only)
-
-```{r echo=TRUE}
-skim_all_yr_2020
-```
 
 You can do python code, like in example chunk below.
 
@@ -605,7 +704,14 @@ You can do python code, like in example chunk below.
 print("hello world")
 ```
 
-## Notes:
+## Notes to self:
+
+We don't have 2020 GDP data
+
+There are about 20 countries missing Gini index data
+
+From OWID Covid, look at "stringeny_index"
+
 
 Additional ideas for controls:
 
